--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Storhaugen Eats</title>
-    <base href="/" />
-
+    <base href="/StorhaugenWebsite/" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="icon-192.png" />
