testing base path

--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -4,12 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Storhaugen Eats</title>
-    <script type="text/javascript">
-        // If we are on GitHub Pages (url contains the repo name), use the repo name as base.
-        // Otherwise (localhost), use the root.
-        var appBase = window.location.href.includes('/StorhaugenWebsite/') ? '/StorhaugenWebsite/' : '/';
-        document.write('<base href="' + appBase + '" />');
-    </script>
+    <base href="/StorhaugenWebsite/" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="apple-touch-icon" href="icon-192.png" />
