--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -42,6 +42,5 @@
     <!-- MudBlazor JS -->
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="js/deviceState.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
-</body>
+    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script></body>
 </html>
