--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -20,6 +20,7 @@
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
 <body>
@@ -42,5 +43,7 @@
     <!-- MudBlazor JS -->
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="js/deviceState.js"></script>
-    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script></body>
+    <script type="importmap"></script>
+    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+</body>
 </html>
