--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -22,6 +22,10 @@
 
     <!-- Custom Styles -->
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/Food.css" rel="stylesheet" />
+    <link href="css/Layout.css" rel="stylesheet" />
+    <link href="css/Login.css" rel="stylesheet" />
+
 
     <!-- PWA -->
     <link rel="manifest" href="manifest.json" />
@@ -32,11 +36,17 @@
 </head>
 <body>
     <div id="app">
-        <div class="loading-screen">
-            <div class="loading-content">
-                <div class="loading-icon">🍽️</div>
-                <div class="loading-text">Loading Storhaugen Eats...</div>
-                <div class="loading-spinner"></div>
+        <div class="app-loading-container">
+            <div class="app-loading-logo">
+                <svg viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z" />
+                </svg>
+            </div>
+
+            <h1 class="app-loading-title">Storhaugen Eats</h1>
+
+            <div class="app-loading-bar-container">
+                <div class="app-loading-bar"></div>
             </div>
         </div>
     </div>
@@ -54,3 +64,131 @@
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 </body>
 </html>
+
+<style>
+    /* Import fonts immediately so they are ready */
+    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fraunces:wght@400;600&display=swap');
+
+    :root {
+        --loading-bg: #1e1e1e; /* Dark background to match app */
+        --loading-text: #ffffff;
+        --loading-primary: #E07A2E; /* Your Markus Orange color */
+        --loading-primary-dark: #bf6322;
+    }
+
+    /* Light Mode Support - optional if you want strictly dark */
+    @media (prefers-color-scheme: light) {
+        :root {
+            --loading-bg: #ffffff;
+            --loading-text: #2d2d2d;
+        }
+    }
+
+    body {
+        margin: 0;
+        background-color: var(--loading-bg); /* Prevents white flash */
+    }
+
+    .app-loading-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        width: 100vw;
+        background-color: var(--loading-bg);
+        font-family: 'DM Sans', sans-serif;
+        color: var(--loading-text);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;
+    }
+
+    /* The Logo Box - Matches your Login Page Brand Icon */
+    .app-loading-logo {
+        width: 80px;
+        height: 80px;
+        border-radius: 20px;
+        background: linear-gradient(135deg, var(--loading-primary), var(--loading-primary-dark));
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        margin-bottom: 24px;
+        box-shadow: 0 10px 25px rgba(224, 122, 46, 0.4);
+        animation: float 3s ease-in-out infinite;
+    }
+
+        .app-loading-logo svg {
+            width: 40px;
+            height: 40px;
+        }
+
+    /* Typography - Matches your Headers */
+    .app-loading-title {
+        font-family: 'Fraunces', serif;
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin: 0 0 32px 0;
+        opacity: 0;
+        animation: fadeIn 0.8s ease-out 0.2s forwards;
+    }
+
+    /* Custom Loading Bar */
+    .app-loading-bar-container {
+        width: 140px;
+        height: 4px;
+        background: rgba(128, 128, 128, 0.2);
+        border-radius: 2px;
+        overflow: hidden;
+        opacity: 0;
+        animation: fadeIn 0.8s ease-out 0.4s forwards;
+    }
+
+    .app-loading-bar {
+        width: 100%;
+        height: 100%;
+        background: var(--loading-primary);
+        transform: translateX(-100%);
+        animation: loading 1.5s infinite ease-in-out;
+        border-radius: 2px;
+    }
+
+    /* Animations */
+    @keyframes float {
+        0%, 100% {
+            transform: translateY(0);
+        }
+
+        50% {
+            transform: translateY(-6px);
+        }
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(10px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    @keyframes loading {
+        0% {
+            transform: translateX(-100%);
+        }
+
+        50% {
+            transform: translateX(0);
+        }
+
+        100% {
+            transform: translateX(100%);
+        }
+    }
+</style>
