--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -64,7 +64,7 @@
     <script src="js/ocrInterop.js"></script>
 
     <script type="importmap"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 </body>
 </html>
 
