--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -61,7 +61,7 @@
     <script src="js/deviceState.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@v5/dist/tesseract.min.js"></script>
-    <script src="js/ocrInterop.js"></script>
+    <script src="js/ocrInterop.js?v=2"></script>
 
     <script type="importmap"></script>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
