Normalize page typography

--- a/StorhaugenWebsite/wwwroot/index.html
+++ b/StorhaugenWebsite/wwwroot/index.html
@@ -23,6 +23,7 @@
     <!-- Custom Styles -->
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/Food.css" rel="stylesheet" />
+    <link href="css/Typography.css" rel="stylesheet" />
     <link href="css/Layout.css" rel="stylesheet" />
     <link href="css/Login.css" rel="stylesheet" />
 
